<resources>
    <string name="app_name">CitizenRights</string>
    <string name="title_activity_login">Citizen Rights app</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_password">Password</string>
    <string name="hint_repassword">Re-enter Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_forget">Reset Password</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_forgetpass">Forget Password?</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_viewissue">ViewissueActivity</string>
    <string name="dept_prompt">Choose a department</string>
    <string-array name="deptarray">
        <item>School</item>
        <item>Office</item>
        <item>Govt_Office</item>
        <item>Bank</item>
        <item>Retail</item>
        <item>NGO</item>

    </string-array>
</resources>