<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="1">



    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="298dp"
        android:layout_height="77dp"
        android:padding="20dp"
        android:layout_gravity="center"
        android:src="@drawable/logo1"
        app:srcCompat="@drawable/logo1"
        android:layout_weight="0.45" />



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:gravity="center"
    android:background="@drawable/lower_border">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:visibility="visible"
        android:src="@drawable/email"
        app:srcCompat="@drawable/email"
        android:background="@android:color/transparent"
        />

    <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/input_login_hint" />

</LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:background="@drawable/lower_border">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:visibility="visible"
                android:src="@drawable/password"
                app:srcCompat="@drawable/password" />
            <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/input_login_hint" />
        </LinearLayout>
        <!-- Login Button -->

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dip"
            android:background="#ea4c88"
            android:text="@string/btn_login"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnLinkToForgetScreen"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="Forgot password?"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />




        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btnLinkToRegisterScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />
    </LinearLayout>

</LinearLayout>