<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="77dp"
                android:layout_marginBottom="2dp"
                android:padding="@dimen/small_padding"
                android:layout_gravity="center"
                android:src="@drawable/logo1"
                app:srcCompat="@drawable/logo1"
                android:layout_weight="0.37" />




            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingLeft="@dimen/large_padding"
                android:paddingRight="@dimen/large_padding"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:gravity="center"
                    android:background="@drawable/lower_border"
                    >

                    <ImageView
                        android:id="@+id/nameicon"
                        android:layout_width="@dimen/icon_width"
                        android:layout_height="@dimen/icon_height"
                        android:padding="@dimen/micro_padding"
                        android:src="@drawable/user"
                        android:visibility="visible"
                        app:srcCompat="@drawable/user" />

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/bg"
                        android:hint="@string/hint_name"
                        android:paddingLeft="@dimen/small_padding"
                        android:inputType="textCapWords"
                        android:textColor="@color/white"
                        android:textColorHint="@color/input_register_hint" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:gravity="center"
                    android:background="@drawable/lower_border"
                    >

                    <ImageView
                        android:id="@+id/phoneicon"
                        android:layout_width="@dimen/icon_width"
                        android:layout_height="@dimen/icon_height"
                        android:padding="@dimen/micro_padding"
                        android:src="@drawable/phone"
                        app:srcCompat="@drawable/phone" />

                    <EditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/bg"
                        android:hint="@string/hint_phone"
                        android:paddingLeft="10dp"
                        android:inputType="phone"
                        android:textColor="@color/white"
                        android:textColorHint="@color/input_register_hint" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:background="@drawable/lower_border">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:padding="5dp"
                        android:src="@drawable/email"
                        app:srcCompat="@drawable/email" />

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/bg"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="10dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/input_register_hint" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:background="@drawable/lower_border">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:padding="5dp"
                        android:src="@drawable/password"
                        app:srcCompat="@drawable/password" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/bg"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:paddingLeft="10dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/input_register_hint" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:background="@drawable/lower_border">

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:padding="5dp"
                        android:src="@drawable/password"
                        app:srcCompat="@drawable/password" />
                    <EditText
                        android:id="@+id/repassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/bg"
                        android:hint="@string/hint_repassword"
                        android:inputType="textPassword"
                        android:paddingLeft="10dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/input_register_hint" />
                </LinearLayout>
                <!-- Login Button -->

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/curve"
                    android:text="@string/btn_register"
                    android:textColor="@color/white" />

                <!-- Link to Login Screen -->

                <Button
                    android:id="@+id/btnLinkToLoginScreen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dip"
                    android:background="@null"
                    android:text="@string/btn_link_to_login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="15dp" />
            </LinearLayout>






        </LinearLayout></ScrollView>





</LinearLayout>