<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="top|center"
    android:orientation="vertical"
    android:padding="5dp"
    android:weightSum="1">

    <ScrollView
        android:id="@+id/svContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="230dp"
                android:layout_height="230dp"
                android:layout_gravity="center"
                android:src="@drawable/citizen"
                app:srcCompat="@drawable/citizen"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                />
            <Button
                android:id="@+id/text"
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:text="Department member login"
                android:textAllCaps="false"
                android:clickable="false"
                android:textColor="@color/colorPrimary"
                android:textSize="10dp" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="15dp"
                android:paddingLeft="@dimen/large_padding"
                android:paddingRight="@dimen/large_padding" >
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:background="@drawable/lower_border">

                    <ImageView
                        android:id="@+id/emailicon"
                        android:layout_width="@dimen/icon_width"
                        android:layout_height="@dimen/icon_height"
                        android:visibility="visible"
                        android:padding="@dimen/micro_padding"
                        android:src="@drawable/email"
                        app:srcCompat="@drawable/email"
                        android:background="@android:color/transparent"
                        />

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="@dimen/small_padding"
                        android:textColor="@color/colorTextPrimary"
                        android:textColorHint="@color/colorTextSecondary" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:gravity="center"
                    android:background="@drawable/lower_border">

                    <ImageView
                        android:id="@+id/passwordicon"
                        android:layout_width="@dimen/icon_width"
                        android:layout_height="@dimen/icon_height"
                        android:padding="@dimen/micro_padding"
                        android:visibility="visible"
                        android:src="@drawable/password"
                        app:srcCompat="@drawable/password" />
                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:paddingLeft="@dimen/small_padding"
                        android:textColor="@color/colorTextPrimary"
                        android:textColorHint="@color/colorTextSecondary" />
                </LinearLayout>
                <!-- Login Button -->

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/curve"
                    android:text="@string/btn_login"
                    android:textColor="@color/white" />






                <!-- Link to Login Screen -->

                <Button
                    android:id="@+id/btnLinkToRegisterScreen"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:text="Register as a department member"
                    android:textAllCaps="false"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="15dp" />

                <Button
                    android:id="@+id/copyrights"
                    android:layout_width="fill_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@null"
                    android:text="@string/copyright"
                    android:textAllCaps="false"
                    android:clickable="false"
                    android:textColor="@color/colorTextSecondary"
                    android:textSize="10dp" />



            </LinearLayout>

        </LinearLayout>

    </ScrollView>




</LinearLayout>